@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-2.0.23 (01 Aug 2002)
+
+  01 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py:
+  ${ROOT}var/cache/edb and friends will get created if they don't exist,
+  closing bug #5813.
+  
   01 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: rewrote the emerge
   search code, making it fully API-compliant and much more streamlined and
   compact.  This rewrite should fix the problem where emerge search doesn't
